samples/_failures_safe/1761621934_a1ea3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86b1bcc3.c: In function ‘main’:
./samples/SAFE/__tmp_86b1bcc3.c:155:13: error: expected expression at end of input
  155 |             execute_operation(&g, operations[i],
      |             ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_86b1bcc3.c:155:13: error: too few arguments to function ‘execute_operation’
./samples/SAFE/__tmp_86b1bcc3.c:116:6: note: declared here
  116 | void execute_operation(Graph *g, GraphOperation op, int param1, int param2) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_86b1bcc3.c:155:13: error: expected declaration or statement at end of input
  155 |             execute_operation(&g, operations[i],
      |             ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_86b1bcc3.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86b1bcc3.c:155:13: error: expected declaration or statement at end of input
